# india-air-quality-dashboard

./: Dockerfile  README.md  app.py  fetch_cpcb_aqi.jl  lat_long.txt  pyproject.toml  requirements.txt
.github/workflows/: fetch_aqi.yml
